# CausalMerge

./: README.md  __init__.py  cli.py  pyproject.toml
api/: __init__.py  routes.py
causalmerge/: config.py  exceptions.py
causalmerge/api/: server.py
causalmerge/graph/: visualizer.py
causalmerge/reporting/: __init__.py
causalmerge/resolution/: __init__.py
data/: __init__.py  loader.py  schema.py
examples/: merge_incident_graphs.py
graph/: __init__.py  builder.py
merge/: __init__.py  aggregator.py  consensus.py  engine.py
reporting/: report.py
resolution/: conflicts.py  dag_enforcer.py  resolver.py
tests/: conftest.py  test_aggregator.py  test_cli.py  test_conflict_detector.py  test_dag_enforcer.py  test_loader.py  test_merge_engine.py  test_resolver.py
tests/fixtures/: graph_a.json  graph_b.json  graph_c.json
